# zspace_alice

./: .gitattributes  .gitignore  Setup.bat  premake5.lua  readme.md
ALICE_PLATFORM/: ALICE.sln  ALICE.vcxproj  ALICE.vcxproj.filters  ALICE_CUDA.vcxproj  ALICE_CUDA.vcxproj.filters  UpgradeLog.htm  packages.config  zProceduralBuilding.cpp  zProceduralBuilding.h  zspace_alice.props
ALICE_PLATFORM/VTune Profiler Results/ALICE/: ALICE.vtuneproj
ALICE_PLATFORM/src/: main.h
ALICE_PLATFORM/src/alice/: ALICE_DLL.h  ALICE_ROBOT_DLL.h  ALICE_RobotDll.lib  RenderMesh.h  graph.h  graphStack.h  linearAlgebra.h  metaMesh.h  nachi.h  newPhysics.h  quickhull.h  rigidCube.h  skeletonMesh.h  spatialBin.h  sqlite3.lib  utilities.h
ALICE_PLATFORM/src/gl2ps/: gl2ps.lib
ALICE_PLATFORM/src/igl/: grad.cpp
ALICE_PLATFORM/src/userSrc/: sketch_empty.cpp  sketch_zSpace_Polytopal.cpp  sketch_zSpace_Striatus_IO.cpp  sketch_zSpace_empty.cpp  sketch_zspaceModule_CurvatureDirections.cpp  sketch_zspaceModule_KMeans.cpp  sketch_zspaceModule_MinimiseArea.cpp  sketch_zspaceModule_MinimiseArea_FDM.cpp  sketch_zspaceModule_Planarise.cpp  sketch_zspace_Base.cpp  sketch_zspace_Block_Slicer.cpp  sketch_zspace_Empty.cpp  sketch_zspace_GraphLoftMesh.cpp  sketch_zspace_GraphMesh.cpp  sketch_zspace_Graph_relax.cpp  sketch_zspace_MeshColor_Guangdu.cpp  sketch_zspace_PatternYate.cpp  sketch_zspace_Planarise.cpp  sketch_zspace_Robot.cpp  sketch_zspace_SDFSlicer.cpp  sketch_zspace_SpatialGraph.cpp  sketch_zspace_StriatusGeneric_Slicer.cpp  sketch_zspace_Striatus_IO_ReadBlocks.cpp  sketch_zspace_Striatus_Slicer.cpp  sketch_zspace_relaxation.cpp  sketch_zspace_toStad.cpp  sketch_zspace_toStad2.cpp  sketch_zspace_usd.cpp
ALICE_PLATFORM/src/zSpace/: zAttributetypes.h  zBufferRender.h  zClustering.h  zColor.h  zDatabase.h  zDatatypes.h  zDisplay.h  zEnumerators.h  zExchange.h  zGraph.h  zIO.h  zLinearAlgebra.h  zMesh.h  zMeshUtilities.h  zOpenStreet.h  zParticle.h  zRobot.h  (+11 more)
ALICE_PLATFORM/src_cuda/: Main.cpp  cuda_functions.cu  cuda_functions.h  cuda_main.h  cuda_sketch.cpp  kernel_test.cu  kernel_test.cuh  particle_cuda.cu  sketch_CUDA_empty.cpp  sketch_Empty.cpp  sketch_zspaceCuda_solarOcclusion_clean.cpp
Alice/: premake5.lua
Alice/src/: main.h
AliceCuda/freeglut/: freeglut_ext.h  freeglut_std.h
Dependencies/: alice_deps.lua
Dependencies/matrices/: matrices.h
EXE/data/: simpleGraph.json
alice2/: CMakeLists.txt  README.md  build.bat  quaternion_camera_implementation.txt
alice2/coda/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
alice2/depends/glfw/include/GLFW/: glfw3.h  glfw3native.h
alice2/depends/glfw/src/: cocoa_joystick.h  cocoa_platform.h  cocoa_time.h  egl_context.h  glx_context.h  internal.h  linux_joystick.h  mappings.h  nsgl_context.h  null_joystick.h  null_platform.h  osmesa_context.h  platform.h  posix_poll.h  posix_thread.h  posix_time.h  wgl_context.h  win32_joystick.h  win32_platform.h  win32_thread.h  win32_time.h  wl_platform.h  x11_platform.h  xkb_unicode.h
alice2/include/: alice2.h
alice2/scripts/: build.bat.in  build.sh.in  organize_build.bat.in  setup_user_sketch.bat
alice2/src/: main.cpp
alice2/src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
alice2/src/input/: CameraController.cpp  CameraController.h  InputManager.cpp  InputManager.h
alice2/src/objects/: PrimitiveObject.cpp  PrimitiveObject.h  SceneObject.cpp  SceneObject.h  ZSpaceObject.cpp  ZSpaceObject.h
alice2/src/sketches/: ISketch.h  SketchManager.cpp  SketchManager.h  SketchRegistry.h  UserSketch.h
alice2/src/utils/: Math.cpp  Math.h  MathUtils.h  Matrix.cpp  Matrix.h  OpenGL.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
alice2/userSrc/: README.md  sketch_base.cpp  sketch_geometry.cpp  sketch_particles.cpp
userSrc/: sketch_empty.cpp  sketch_natpower.cpp  sketch_zspace_Base.cpp  sketch_zspace_Empty.cpp
userSrc/zspace_cuda/: sketch_zspaceCuda_solar.cpp  sketch_zspaceCuda_solarOcclusion_clean.cpp  zspaceCuda_solar.cu
userSrc/zspace_drl/: VoxelSystem.h  sketch_zspace_Tutorial_1.cpp  sketch_zspace_VoxelSystem.cpp
userSrc/zspace_module/: sketch_zspaceModule_CurvatureDirections.cpp  sketch_zspaceModule_KMeans.cpp  sketch_zspaceModule_MinimiseArea.cpp  sketch_zspaceModule_MinimiseArea_FDM.cpp  sketch_zspaceModule_Planarise.cpp
userSrc/zspace_ov/: sketch_zspace_OV_Base.cpp  sketch_zspace_OV_Core.cpp  sketch_zspace_OV_Core_live.cpp  sketch_zspace_USD_Base.cpp
userSrc/zspace_rhino/: sketch_zSpace_NurbsCurve.cpp  sketch_zSpace_Tester_Rhino7SDK.cpp
userSrc/zspace_sketches/: sketch_zSpace_Striatus_Block.cpp  sketch_zSpace_Striatus_IO.cpp  sketch_zspace_BJ_Mapper.cpp  sketch_zspace_Block_Slicer.cpp  sketch_zspace_CCF.cpp  sketch_zspace_GLTF.cpp  sketch_zspace_GraphLoftMesh.cpp  sketch_zspace_GraphMesh.cpp  sketch_zspace_GraphPolyhedra_WIP - Copy.cpp  sketch_zspace_GraphPolyhedra_WIP.cpp  sketch_zspace_Graph_relax.cpp  sketch_zspace_HKBridge.cpp  sketch_zspace_HKBridge_TNA.cpp  sketch_zspace_KMeans.cpp  sketch_zspace_MeshColor_Guangdu.cpp  sketch_zspace_NanshaRoof.cpp  sketch_zspace_PanelAnalysis.cpp  sketch_zspace_PanelSplit.cpp  sketch_zspace_Parameterization.cpp  sketch_zspace_PatternYate.cpp  sketch_zspace_PatternYate_automate.cpp  sketch_zspace_Planarise.cpp  sketch_zspace_PlanarityCheck.cpp  sketch_zspace_Robot.cpp  sketch_zspace_RobotFab.cpp  sketch_zspace_SDFSlicer.cpp  sketch_zspace_SDFSlicer_BJ.cpp  sketch_zspace_SDFSlicer_Osaka.cpp  sketch_zspace_SpatialGraph.cpp  sketch_zspace_StriatusGeneric_Slicer.cpp  sketch_zspace_Striatus_IO_ReadBlocks.cpp  sketch_zspace_Striatus_Slicer.cpp  sketch_zspace_SunVectorTransform.cpp  sketch_zspace_USD_Base.cpp  sketch_zspace_gridshell.cpp  sketch_zspace_heat_slicer.cpp  sketch_zspace_heat_slicer_Sanya.cpp  sketch_zspace_relaxation.cpp  sketch_zspace_toStad.cpp  sketch_zspace_toStad2.cpp  (+1 more)
userSrc/zspace_tutorials/: sketch_zspace_creatMesh.cpp  sketch_zspace_planarityCheck.cpp  sketch_zspace_sanyaMeshStream.cpp  sketch_zspace_sanyaMeshWalk.cpp
(+3334 files in other folders)
